[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myPackage-daviddmlops"
version = "0.1.0"
description = "My first Python package"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT License"}

[project.urls]
"Homepage" = "https://github.com/DavidDLM/MLOPs-7"
